# j-stocks-dashboard

./: .gitignore  API_REFERENCE.md  CSV_FIELDS_REFERENCE.md  README.md  USAGE_GUIDE.md  app.py  benchmark.py  pyproject.toml
src/components/: charts.py  dividend_analysis.py  financial_analysis.py  news_sentiment_analysis.py  sector_analysis.py
src/data/: loader.py
src/utils/: cache.py
