[project]
name = "j-stocks-dashboard"
version = "0.1.0"
description = "日本株ダッシュボード - Streamlitベースの株価分析ツール"
authors = [
    {name = "Akira Osanai", email = "your-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.18",
    "altair>=5.0.0",
    "streamlit-plotly-events>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
